--- a/templates/edge.html
+++ b/templates/edge.html
@@ -65,8 +65,6 @@
                         <div class="container d-flex flex-column align-items-center">
                             <div class="container row d-flex">
                                 <div class="col-8">
-
-
                                     <div class="seat mb-4 ratio ratio-16x9" id="seat">
                                         <div class="player-area">
                                             <div id="player_edge"></div>
@@ -78,33 +76,23 @@
                                             </p>
                                         </div>
                                     </div>
-
-
                                 </div>
                                 <div class="container col-4 d-flex flex-column">
-                                    <div>
-                                        <div id="IP"
-                                            class="d-flex flex-column align-items-center py-2"
-                                            style="border:1px solid black">
-                                            <h3>IP:</h3>
-                                            <h3>my_ip</h3>
+                                    <div id="about"
+                                        class="container d-flex flex-column align-items-center p-0 flex-fill">
+                                        <div id="about_IP"
+                                            class="container d-flex flex-row justify-content-center px-0">
+                                            <iframe id='IP' frameborder="0"></iframe>
+                                        </div>
+                                        <div id="about_gpu_name"
+                                            class="container d-flex flex-row justify-content-center px-0">
+                                            <iframe id='gpu_name' frameborder="0"></iframe>
                                         </div>
                                     </div>
-                                    <div>
-                                        <div id="gpu_name"
-                                            class="d-flex flex-column align-items-center py-2"
-                                            style="border:1px solid black">
-                                            <h3>GPU:</h3>
-                                            <h3>my_gpu</h3>
-                                        </div>
-                                    </div>
-
                                     <div id="hardware"
-                                        class="container d-flex flex-row justify-content-center px-0">
-                                        <iframe id='cpu' class="col-6" height="190"
-                                            frameborder="0"></iframe>
-                                        <iframe id='gpu' class="col-6" height="190"
-                                            frameborder="0"></iframe>
+                                        class="container d-flex flex-row justify-content-center p-0 flex-fill">
+                                        <iframe id='cpu' class="col-6" frameborder="0"></iframe>
+                                        <iframe id='gpu' class="col-6" frameborder="0"></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -134,13 +122,12 @@
 
             const EDGE_ID = '{{edge_id}}';
 
-            const protocal = "https";
             const GRAFANA_HOST = "{{grafana_host}}";
-            const port = "3000";
-            const dashboardId = "b4307069-b390-4c30-adac-e7397c3e672bd"
-            const dashboard_name = "xrcubee"
-            const theme = "{{theme}}"
-            const hours = 6;
+            const DASHBOARD_ID = "{{dashboard_id}}"
+            const DASHBOARD_NAME = "{{dashboard_name}}"
+            const THEME = "{{theme}}"
+            const TIME_SPAN = "{{time_span}}";
+
         </script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -167,14 +154,20 @@
 
         <script>
             function get_src(panel_id) {
-                return protocal + "://" + GRAFANA_HOST + ":" + port
-                    + "/d-solo/" + dashboardId + "/" + dashboard_name
-                    + "?orgId=1&refresh=5s&from=now-" + hours + "h&to=now&theme=" + theme
+                return GRAFANA_HOST + "/d-solo/" + DASHBOARD_ID + "/" + DASHBOARD_NAME
+                    + "?orgId=1&refresh=5s&from=now-" + TIME_SPAN + "&to=now&theme=" + THEME
                     + "&panelId=" + panel_id;
             }
-
+            let a = document.getElementsByClassName("player-area")[0].clientHeight;
+            console.log(a / 4);
+            document.getElementById("IP").src = get_src('{{edge_id}}');
+            document.getElementById("IP").style.height = a / 4 + "px";
+            document.getElementById("gpu_name").src = get_src('{{edge_id}}');
+            document.getElementById("gpu_name").style.height = a / 4 + "px";
             document.getElementById("gpu").src = get_src('{{edge_id}}');
+            document.getElementById("gpu").style.height = a / 2 + "px";
             document.getElementById("cpu").src = get_src('{{edge_id}}');
+            document.getElementById("cpu").style.height = a / 2 + "px";
             document.getElementById("latency").src = get_src('{{edge_id}}');
             document.getElementById("throughput").src = get_src('{{edge_id}}');
             document.getElementById("packet_loss").src = get_src('{{edge_id}}');
