--- a/templates/edge.html
+++ b/templates/edge.html
@@ -57,7 +57,6 @@
                         </div>
                     </nav>
                 </div>
-
             </div>
             <div class="body" id="page-area">
                 <div class="container flex-grow-1 pt-4 tabcontent" id="detail">
@@ -98,11 +97,11 @@
                             </div>
                             <div id="net"
                                 class="container row d-flex flex-row justify-content-center">
-                                <iframe id='latency' class="col-4" height="250"
+                                <iframe id='latency' class="col-4" height="200"
                                     frameborder="0"></iframe>
-                                <iframe id='throughput' class="col-4" height="250"
+                                <iframe id='throughput' class="col-4" height="200"
                                     frameborder="0"></iframe>
-                                <iframe id='packet_loss' class="col-4" height="250"
+                                <iframe id='packet_loss' class="col-4" height="200"
                                     frameborder="0"></iframe>
                             </div>
                         </div>
@@ -159,18 +158,20 @@
                     + "&panelId=" + panel_id;
             }
             let a = document.getElementsByClassName("player-area")[0].clientHeight;
-            console.log(a / 4);
-            document.getElementById("IP").src = get_src('{{edge_id}}');
+
+            let id_stride = (parseInt('{{edge_id}}') - 1) * 11;
+
+            document.getElementById("IP").src = get_src(id_stride + 5);
             document.getElementById("IP").style.height = a / 4 + "px";
-            document.getElementById("gpu_name").src = get_src('{{edge_id}}');
+            document.getElementById("gpu_name").src = get_src(id_stride + 1);
             document.getElementById("gpu_name").style.height = a / 4 + "px";
-            document.getElementById("gpu").src = get_src('{{edge_id}}');
+            document.getElementById("gpu").src = get_src(id_stride + 2);
             document.getElementById("gpu").style.height = a / 2 + "px";
-            document.getElementById("cpu").src = get_src('{{edge_id}}');
+            document.getElementById("cpu").src = get_src(id_stride + 3);
             document.getElementById("cpu").style.height = a / 2 + "px";
-            document.getElementById("latency").src = get_src('{{edge_id}}');
-            document.getElementById("throughput").src = get_src('{{edge_id}}');
-            document.getElementById("packet_loss").src = get_src('{{edge_id}}');
+            document.getElementById("latency").src = get_src(id_stride + 10);
+            document.getElementById("throughput").src = get_src(id_stride + 4);
+            document.getElementById("packet_loss").src = get_src(id_stride + 11);
         </script>
     </body>
 
