--- a/static/css/ovenspace.css
+++ b/static/css/ovenspace.css
@@ -10,7 +10,7 @@ body {
     font-weight: 400;
     line-height: 1.625;
     /* color: #6c757d; */
-    background-color:white;
+    background-color: white;
 }
 
 
@@ -20,7 +20,7 @@ body {
     }
 }
 
-@media (min-width: 2000px) {
+@media (min-width: 1800px) {
     .container {
         max-width: 1750px;
     }
@@ -136,7 +136,8 @@ h6 {
 /* OvenSpace styles. */
 .app-wrapper {
     min-height: 100vh;
-    /* background: #edeae4; */ /* changed to default white */
+    /* background: #edeae4; */
+    /* changed to default white */
 }
 
 .header {
@@ -290,6 +291,10 @@ iframe {
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 5px;
+}
+
+#about iframe {
+    padding: 0px !important;
 }
 
 .info h2 {
