--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,34 +18,14 @@
         <title>Dashboard</title>
     </head>
 
-    <body>
+    <body class="app">
         <div id="dummy">
             <div id="dashboard" class="row container d-flex flex-column display-panel">
+                <!-- This row might need to remove. Change to iframe -->
                 <div id="general_info" class="container d-flex flex-row justify-content-center">
-                    <div class="info container d-flex flex-column align-items-center col-4"
-                        height="400">
-                        <div class="d-flex flex-column align-items-center pt-4 pb-3"
-                            style="background-color: #353d4c; width: 110%;">
-                            <h2>3</h2>
-                            <p>XR Connections</p>
-                        </div>
-                    </div>
-                    <div class="info container d-flex flex-column align-items-center col-4"
-                        height="400">
-                        <div class="d-flex flex-column align-items-center pt-4 pb-3"
-                            style="background-color: #37c3ca; width: 110%;">
-                            <p>Edge GPUs</p>
-                            <h2>8</h2>
-                        </div>
-                    </div>
-                    <div class="info container d-flex flex-column align-items-center col-4"
-                        height="400">
-                        <div class="d-flex flex-column align-items-center pt-4 pb-3"
-                            style="background-color: #37c3ca; width: 110%;">
-                            <p>Terminal Devices</p>
-                            <h2>6</h2>
-                        </div>
-                    </div>
+                    <iframe class="col-4" id='1' height="200" frameborder="0"></iframe>
+                    <iframe class="col-4" id='2' height="200" frameborder="0"></iframe>
+                    <iframe class="col-4" id='3' height="200" frameborder="0"></iframe>
                 </div>
                 <div class="container d-flex flex-row">
                     <iframe class="col-6" id='download' height="200" frameborder="0"></iframe>
@@ -73,6 +53,11 @@
                     document.getElementById("upload").src = get_src(92);
                     document.getElementById("packet_loss").src = get_src(93);
                     document.getElementById("latency").src = get_src(94);
+
+                    // TODO fix here with proper panel id
+                    document.getElementById("1").src = get_src(1);
+                    document.getElementById("2").src = get_src(2);
+                    document.getElementById("3").src = get_src(3);
                 </script>
             </div>
         </div>
