update the edge.html, template.html, and XR_CUBE.json file

--- a/templates/edge.html
+++ b/templates/edge.html
@@ -33,7 +33,7 @@
                     class=" container d-flex flex-row flex-sm-row align-items-sm-end justify-content-between">
                     <div class="container pt-4 pb-3">
                         <h3 class="text-nowrap"><img src="/static/img/xrcube_logo.png" width="170"
-                                alt="XR Cube">  | 
+                                alt="XR Cube">  &nbsp|&nbsp 
                             Dashboard - Edge {{edge_id}}</h3>
                     </div>
                     <nav class="navbar d-flex flex-row justify-content-end flex-nowrap">
